*Empty MediaWiki Message*

--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -1,7 +1,9 @@
-'''Imbolc''' is eyne van de veer belangryke feesten dee as de olde kelten, en deen nåsåten, vyret. Et wörd eholden up 31 februari. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Et is een feest med allerhande gebruken ümme de vrüchterbaarheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme nemmet sy ouk disse dåtum, want et kümt nu precys in et midden van et [[winter]] en et [[lente]].
+'''Imbolc''' is eyne van de veer belangryke feesten dee as de olde kelten, en deen nåsåten, vyret. Et wörd eholden up 1 februåri. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Van vrogger uut is et een ploog- en säifeest. Et is een feest med allerhande gebruken ümme de vrüchterbaarheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme nemmet sy ouk disse dåtum, want et kümt nu precys in et midden van et [[winter]] en et [[lente]].
 
 Dissen feest is an de godinne (en later de heilige) [[Brigrid]] ewyded. 
 
-De name Imbolc kümt van et Yrske ''i molg'', wat ''in den buuk'' betekkend. Ofwal, de ooier dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
+De name Imbolc kümt van et Yrske ''i molg'', wat ''in den buuk'' betekkend. Ofwal, de sköäpe (ooier) dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
+
+In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 
 {{Dialekt|sdz}}
