--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -6,4 +6,6 @@ De name Imbolc kümt van et Yrske ''i molg'', wat ''in den buuk'' betekkend. Ofw
 
 In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 
+De yren doot nå tradity van de låtste grån een krüsyn knöppen, wat sy boaven de düre hanget töt de volgende Imbolc. [[Keltisk krüüs|Brigrid-krüsyn]] het so een vrütselgyn.
+
 {{Dialekt|sdz}}
