--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -2,7 +2,7 @@
 
 Dissen feest is an de godinne (en later de heilige) [[Brigrid]] ewyded. 
 
-De name Imbolc kümt van et Yrske ''i molg'', wat ''in den buuk'' betekkend. Ofwal, de sköäpe (ooier) dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
+De name Imbolc kümt van et Yrske '''i molg''', wat ''in den buuk'' betekkend. Ofwal, de sköäpe (ooier) dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
 
 In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 
