*Empty MediaWiki Message*

--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -1,4 +1,4 @@
-'''Imbolc''' is eyne van de veer belangryke feesten dee as de olde kelten, en deen nåsåten, vyret. Et wörd eholden up 1 februåri. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Van vrogger uut is et een ploog- en säifeest. Et is een feest med allerhande gebruken ümme de vrüchterbaarheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme nemmet sy ouk disse dåtum, want et kümt nu precys in et midden van et [[winter]] en et [[lente]].
+'''Imbolc''' is eyne van de veer belangryke feesten dee as de olde kelten, en deen nåsåten, vyret. Et wörd eholden up 1 februåri. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Van vrogger uut is et een ploog- en säifeest. Et is een feest med allerhande gebruken ümme de vrüchtbaerheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme nemmet sy ouk disse dåtum, want et kümt nu precys in et midden van et [[winter]] en et [[lente]].
 
 Dissen feest is an de godinne (en later de heilige) [[Brigrid]] ewyded. 
 
