*Empty MediaWiki Message*

--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -9,3 +9,4 @@ In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 De yren doot nå tradity van de låtste grån een krüsyn knöppen, wat sy boaven de düre hanget töt de volgende Imbolc. [[Keltisk krüüs|Brigrid-krüsyn]] het so een vrütseltyn.
 
 {{Dialekt|sdz}}
+[[Kategorie:Feest]]
