*Empty MediaWiki Message*

--- a/Ostara.mw
+++ b/Ostara.mw
@@ -1,9 +1,9 @@
-'''Ostara''' of '''Eostre''' (sol vandage klinken as: '''Oustere''') is een [[Saksiese godn|sassiske godinne]]. Sy is de godinne van de lente, et licht, de warmte en et boaven koamen van de sünne. Et feest van höyr is ekarstend as Påsken. 
+'''Ostara''' of '''Eostre''' (sol vandage klinken as: '''Oustere''') is een [[Saksiese godn|sassiske godinne]]. Sy is de godinne van de lente, et licht, de warmte en et boaven koamen van de sünne. Et feest van höyr is ekarstend as [[Påsken]]. 
 
 Der wörd vake esegd dat Ostara desülvden is as de noordske vrüchtbaarheidsgodinne [[Frieja|Vrya]].
 
 ==Påsken/Ouster==
-Up [[Duutslaand|Düütskland]] wörd et [[Poasen|påskfeest]] ''Ostern'' enöömt en in [[Englaand|Ängeland]] ''Easter''. Den Geysteliken [[Beda Venerabilis]] (673-735) skreaven up de ''temporum ratione'' dat de [[Saksen (volk)|Sassen]] een godinne anbeaden dee Eástra enömed wördden. De månd maert wördden by ear ''Ésturmonath'' enömed, ovwal ''Oustara's månd''.
+Up [[Duutslaand|Düütskland]] wörd et Påsken ''Ostern'' enöömt en in [[Englaand|Ängeland]] ''Easter''. Den Geysteliken [[Beda Venerabilis]] (673-735) skreaven up de ''temporum ratione'' dat de [[Saksen (volk)|Sassen]] een godinne anbeaden dee Eástra enömed wördden. De månd maert wördden by ear ''Ésturmonath'' enömed, ovwal ''Oustara's månd''.
 
 In et [[Oldheugduuts|oldhoogdüütsk]] heat godinne Eástr Ostara. De eyre van godinne Ostara döden de sassen elk jår een feest, wat sy ôstartage nömeden. Ôstartage is et mearvold van ôstarâ. Et feest duurden twey dagen. Et ängelsken Easter kümt van de name van de godinne Eástra en in et düütsk Ostern an godinne Ostara.
 
