*Empty MediaWiki Message*

--- a/Ostara.mw
+++ b/Ostara.mw
@@ -1,4 +1,4 @@
-'''Ostara''' of '''Eostre''' (sol vandage klinken as: '''Oustere''') is een [[Saksiese godn|sassiske godinne]]. Sy is de godinne van de lente, et licht, de warmte en et boaven koamen van de sünne. Et feest van höyr is ekarstend as [[Påsken]]. 
+'''Ostara''' of '''Eostre''' (sol vandage klinken as: '''Oustere''') is een [[Saksiese godn|sassiske godinne]]. Sy is de godinne van de lente, et licht, de warmte en et boaven koamen van de sünne. Et feest van höyr is ekarstend as [[Påsken]], up 21 meart. 
 
 Der wörd vake esegd dat Ostara desülvden is as de noordske vrüchtbaarheidsgodinne [[Frieja|Vrya]].
 
