*Empty MediaWiki Message*

--- a/Ostara.mw
+++ b/Ostara.mw
@@ -1,6 +1,6 @@
 '''Ostara''' of '''Eostre''' (sol vandage klinken as: '''Oustere''') is een [[Saksiese godn|sassiske godinne]]. Sy is de godinne van de lente, et licht, de warmte en et boaven koamen van de sünne. Et feest van höyr is ekarstend as [[Påsken]], up 21 meart. 
 
-Der wörd vake esegd dat Ostara desülvden is as de noordske vrüchtbaarheidsgodinne [[Frieja|Vrya]].
+Der wörd vake esegd dat Ostara desülvden is as de noordske vrüchtbearheidsgodinne [[Frieja|Vrya]].
 
 ==Påsken/Ouster==
 Up [[Duutslaand|Düütskland]] wörd et Påsken ''Ostern'' enöömt en in [[Englaand|Ängeland]] ''Easter''. Den Geysteliken [[Beda Venerabilis]] (673-735) skreaven up de ''temporum ratione'' dat de [[Saksen (volk)|Sassen]] een godinne anbeaden dee Eástra enömed wördden. De månd maert wördden by ear ''Ésturmonath'' enömed, ovwal ''Oustara's månd''.
@@ -9,7 +9,7 @@ In et [[Oldheugduuts|oldhoogdüütsk]] heat godinne Eástr Ostara. De eyre van g
 
 De godinne Ostara wördden alleyne döär de sassen vereyred. Vrogger vyreden sy in et noorden van et hüdige Düütskland, et ousten van et hüdige Neaderland en et [[Angelsaksen|angelsassiske]] Ängeland ouk Ouster, mar de filosofy rundümme Ostara wördden döär de karke gelyke edåne an dat van et christelike påsken. Dårümme ouk dat et in Neaderland nu påsken enöömt wörd, van et jöödsken pesach feest oaver-enöämen.
 
-By ear feest wördden der groute vüren an-estöäken, as ümme de kwåde krachten vord te dryven en et wearümme koamen van de sünne te vyren. Misskyn dat der by dit feest, lyk-as by de Kelten, de maagdys en de jungens mekare opsöchten by de [[poasvuur|båke]] ümme brummers te kyken. Op disse wyse was ear vrüchtbaarheid lyk ouk dat van et land. Et aske van et vüür wördden later oaver de landen verdealed en eströied, wat good is vöär de grund.
+By ear feest wördden der groute vüren an-estöäken, as ümme de kwåde krachten vord te dryven en et wearümme koamen van de sünne te vyren. Misskyn dat der by dit feest, lyk-as by de Kelten, de maagdys en de jungens mekare opsöchten by de [[poasvuur|båke]] ümme brummers te kyken. Op disse wyse was ear vrüchtbearheid lyk ouk dat van et land. Et aske van et vüür wördden later oaver de landen verdealed en eströied, wat good is vöär de grund.
 
 ==Lente==
 Ostara is de godinne van de [[leante|lentetyd]]. Sy verbeald de oaverwinning van et licht en et anbreaken van de vrüchtbare tyden. 
@@ -26,7 +26,7 @@ Ostara is de Godinne van de strålende morgen, et boavenkoamende licht.
 In de ''vita Carola Magni'' van [[Einhardt]] (9e Ewe N.C.), de geskydskryver van [[Karel 'n Grootn|Karel de Groten]] wördt et woord ‘Ostarmonath’ gebruukt vöär april. Uut disse sinsneade wörd ehaald dat Eostra ouk wal Ostara enöömed wördden. 
 
 In de byb van Abdij van Corvey in Noordryn-Westfalen hebt se olde boken. Eyne van dee boken steyt een gedicht in, ewyd an Eostar. 
-Disse tekste kümt uut de 10e ewe. Et is een gebed dee vrögt når et vrüchbaar maken van de akker, et wear gröön wörden van de natüür. 
+Disse tekste kümt uut de 10e ewe. Et is een gebed dee vrögt når et vrüchbear maken van de akker, et wear gröön wörden van de natüür. 
 {|
 |
 ===Olddüütsk===
