*Empty MediaWiki Message*

--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -8,7 +8,7 @@ In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 
 De yren doot nå tradity van de låtste grån een krüsyn knöppen, wat sy boaven de düre hanget töt de volgende Imbolc. [[Keltisk krüüs|Brigrid-krüsyn]] het so een vrütseltyn.
 
-De kelten hadden ear jår ait med [[Samhain]] begünnet, düs nå 1 november. Teagenwoordig is de germaanske tradity der noch tüsken ekoamen, med [[Juul]] up oans [[Old en Ny]]. Dårnå kwamt Imbolc, et eyrste feest van et jår volgens de kelten. Nå Imbolc kümt -nå de germaanske tradity- [[Ostara|Oustara]]/ Påsken. mar de Kelten hadden nå Imbolc ait [[Beltane]] up den åvend nå 1 mei hen. Wår Samhain geyt oaver de doud en hoape up licht, geyt Imbolc oaver de hoape dat uutkümt; want et licht en et leaven koamt wearümme. Wat uutendelik syne vultooiing kregt med Beltane; se [[summer]] dee oaverwünnen hevt. Mar noudlottig med et vannys begünnen dan wear.
+De kelten hadden ear jår ait med [[Samhain]] begünnet, düs nå 1 november. Teagenwoordig is de germaanske tradity der noch tüsken ekoamen, med [[Juul]] up oans [[Old en Ny]]. Dårnå kwamt Imbolc, et eyrste feest van et jår volgens de kelten. Nå Imbolc kümt -nå de germaanske tradity- [[Ostara|Oustara]]/ Påsken. mar de Kelten hadden nå Imbolc ait [[Beltane]] up den åvend nå 1 mei hen. Wår Samhain geyt oaver de doud en hoape up licht, geyt Imbolc oaver de hoape dat uutkümt; want et licht en et leaven koamt wearümme. Wat uutendelik syne vultooiing kregt med Beltane; se [[summer]] dee oaverwünnen hevt. Mar noudlottig mot et vannys begünnen dan wear.
 
 {{Dialekt|sdz}}
 [[Kategorie:Feest]]
