--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -1,13 +1,16 @@
 '''Imbolc''' is eyne van de veer belangryke feesten dee as de [[olde kelten]], en deen nåsåten, vyret. Et wörd eholden up 1 februåri. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Van vrogger uut is et een ploog- en säifeest. Et is een feest med allerhande gebruken ümme de vrüchtbaerheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme nemmet sy ouk disse dåtum, want et kümt nu precys in et midden van et [[winter]] en et [[lente]].
 
-Dissen feest is an de godinne (en later de heilige) [[Brigrid]] ewyded. 
+===Symbolen===
+Disse feest is an de godinne (en later de heilige) [[Brigrid]] ewyded.
 
-De name Imbolc kümt van et Yrske '''i molg''', wat ''in den buuk'' betekkend. Ofwal, de sköäpe (ooier) dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
+De [[yren|ierlaand]] doot nå tradity van de låtste grån een krüsyn knöppen, wat sy boaven de düre hanget töt de volgende Imbolc. [[Keltisk krüüs|Brigrid-krüsyn]] het so een vrütseltyn. 
 
 In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 
-De yren doot nå tradity van de låtste grån een krüsyn knöppen, wat sy boaven de düre hanget töt de volgende Imbolc. [[Keltisk krüüs|Brigrid-krüsyn]] het so een vrütseltyn.
+===Namenverklåring===
+De name Imbolc kümt van et Yrske '''i molg''', wat ''in den buuk'' betekkend. Ofwal, de sköäpe (ooier) dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
 
+===Jårweel===
 De kelten hadden ear jår ait med [[Samhain]] begünnet, düs nå 1 november. Teagenwoordig is de germaanske tradity der noch tüsken ekoamen, med [[Juul]] up oans [[Old en Ny]]. Dårnå kwamt Imbolc, et eyrste feest van et jår volgens de kelten. Nå Imbolc kümt -nå de germaanske tradity- [[Ostara|Oustara]]/ Påsken. mar de Kelten hadden nå Imbolc ait [[Beltane]] up den åvend nå 1 mei hen. Wår Samhain geyt oaver de doud en hoape up licht, geyt Imbolc oaver de hoape dat uutkümt; want et licht en et leaven koamt wearümme. Wat uutendelik syne vultooiing kregt med Beltane; se [[summer]] dee oaverwünnen hevt. Mar noudlottig mot et vannys begünnen dan wear.
 
 {{Dialekt|sdz}}
