--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -11,7 +11,7 @@ In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 De name Imbolc kümt van et Yrske '''i molg''', wat ''in den buuk'' betekkend. Ofwal, de sköäpe (ooier) dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
 
 ===Jårweel===
-De kelten hadden ear jår ait med [[Samhain]] begünnet, düs nå 1 november. Teagenwoordig is de germaanske tradity der noch tüsken ekoamen, med [[Juul]] up oans [[Old en Ny]]. Dårnå kwamt Imbolc, et eyrste feest van et jår volgens de kelten. Nå Imbolc kümt -nå de germaanske tradity- [[Ostara|Oustara]]/ Påsken. mar de Kelten hadden nå Imbolc ait [[Beltane]] up den åvend nå 1 mei hen. Wår Samhain geyt oaver de doud en hoape up licht, geyt Imbolc oaver de hoape dat uutkümt; want et licht en et leaven koamt wearümme. Wat uutendelik syne vultooiing kregt med Beltane; se [[summer]] dee oaverwünnen hevt. Mar noudlottig mot et vannys begünnen dan wear.
+De kelten hadden ear jår ait med [[Samhain]] begünned, düs nå 1 november. Teagenwoordig is de germaanske tradity der noch tüsken ekoamen, med [[Juul]] up oans [[Old en Ny]]. Dårnå kwamt Imbolc, et eyrste feest van et jår volgens de kelten. Nå Imbolc kümt -nå de germaanske tradity- [[Ostara|Oustara]]/ Påsken. mar de Kelten hadden nå Imbolc ait [[Beltane]] up den åvend nå 1 mei hen. Wår Samhain geyt oaver de doud en hoape up licht, geyt Imbolc oaver de hoape dat uutkümt; want et licht en et leaven koamt wearümme. Wat uutendelik syne vultooiing kregt med Beltane; se [[summer]] dee oaverwünnen hevt. Mar noudlottig mot et vannys begünnen dan wear.
 
 {{Dialekt|sdz}}
 [[Kategorie:Feest]]
