--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -1,4 +1,4 @@
-'''Brian O'Nolan''' ([[Yrsk]]: ''Brian Ó Nualláin''; [[5 oktober]] [[1911]] – [[1 april]] [[1966]]) was nen [[Yrland|yrsken]] skryver, toneelskryverr en satirist en algemeyn eseen as een vöäranstånd figuur in [[postmodernisme|postmodernistiske]] [[literatuur]]. Syne [[engels|engelske]] böke, so as At Swim-Two-Birds en 'n Darden Polityman, skreyv hee under synen skryversnaam Flann O'Brien. Syne lange ryge satiriske [[column|nöälstükkes]] in de Irish Times en een [[keltisk]]talig book ''An Béal Bocht'' skreyv hee under de naam Myles na gCopaleen.
+'''Brian O'Nolan''' ([[Yrsk]]: ''Brian Ó Nualláin''; [[5 oktober]] [[1911]] – [[1 april]] [[1966]]) was nen [[Yrland|yrsken]] skryver, toneelskryver en satirist. Hee wörd algemeyn eseen as een vöäranstånd figuur in [[postmodernisme|postmodernistiske]] [[literatuur]]. Syne [[engels|engelske]] böke, so as At Swim-Two-Birds en 'n Darden Polityman, skreyv hee under synen skryversnaam Flann O'Brien. Syne lange ryge satiriske [[column|nöälstükkes]] in de Irish Times en een [[keltisk]]talig book ''An Béal Bocht'' skreyv hee under de naam Myles na gCopaleen.
 
 O'Nolan syne böke hebbet een breyd antal leevhebbers an etrökken üm öäre bizarre humor en modernistiske metafikty. As skryver hüng O'Nolan slim up [[James Joyce]]. Toch keyk hee med een skel gesichte når Joyce syne verhearliking, dee vöäle uut de yrske skryvtradity oaverskaduwet. Dårvan sea hee es "Ik sweyre by God, as ik den naam Joyce noch eyn mål höyre kryg ik wisse 'n bruus üm 'n bek."
 
