*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -4,5 +4,33 @@ O'Nolan syne böke hebbet een breyd antal leevhebbers an etrökken üm öäre bi
 
 O'Nolan was et grötste deyl van syn leaven alkoholist en knoyeden up latere leyvtyd med syne gesundheid.<ref>[[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese.] Vol.2 (L-W). 1996, [[Garland Publishing]], New York/London . ISBN 978-0-8240-5990-3. p798</ref> Hee kreyg hals[[kanker]] en störv an nen härtanval up [[1 april]] [[1966]].<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Micheál Ó Nualláin. The Brother: memories of Brian The Irish Times, 1 October 2011.] Bekeaken up 1 October 2011.</ref>
 
+==Leyvensloup==
+
+===Skooltyd===
+O'Nolan güng når Blackrock College wår hee engelsk leyreden van de höyvdmeister en tokumstige [[aartsbiskup]] [[JOhn Charles McQuaid]].<ref>[http://catalogue.nli.ie/Record/vtls000029328 Farragher, Sean. Wyer, "Annrao. Blackrock College 1860-1995". Dublin, Paraclete Press (1995). ISBN 0946639191.</ref>
+
+Farragher en Wyer skryvet et volgende:
+
+Dr McQuaid himself stünd bekend as een uutsteakend engelskleyraar. Doo as hee een mål nit in de klasse was, deyd eyne van syne leyrlingen, Brian O'Nolan, rechtevoort bekend as Myles na gCopaleen, grootspreaken teagen de rest van de klasse dat der mär twey lüde in de skole warren dee fatsoonlik engelsk kunnen skryven, namelik Dr. McQuaid en heeselv. Se warren et unmiddellik med üm eyns. En Dr. McQuaid beweys Myles de eyre dat hee een klein gedicht van üm upnöäm in de eyrste uutgave van de vernyde College Annual (1930) - dit was Myles' eyrste uutegeaven stükke.<ref>[https://seamussweeney.wordpress.com/2016/05/01/flann-obriens-english-teacher-john-charles-mcquaid/ Séamus Sweeney Blog. "Flann O'Brien's English Teacher: John Charles McQuaid.] Skreaven up 1 mei 2016. Bekeaken up 1 november 2016.</ref>
+
+et värsken selv, "Ad Astra", geyt so:
+<blockquote>
+Ah! When the skies at night
+Are damascened with gold,
+Methinks the endless sight
+Eternity unrolled. 
+</blockquote>
+
+In oaversetting is dat:
+<blockquote>
+Ach! As de nachtelucht
+is damaskeyrd med gold,
+Den eandelose blik my ducht
+Eywigheid untrolled.
+</blockquote>
+
+O'Nolan spandeyreden syne skooljåren ouk deyls an de Synge Street Christian Brothers School. Syn book [[The Hard Life]] is ne halv-autobiografiske beskryving van syne beleyving van de Christenbröyrs.
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Yrsken skryver]]
