--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -25,8 +25,8 @@ In oaversetting is dat:
 <blockquote>
 Ach! As de nachtelucht<br>
 is damaskeyrd med gold,<br>
-Den eandelose blik my ducht<br>
-Eywigheid untrolled.
+Den eandelosen blik my ducht<br>
+de Eywigheid untrolled.
 </blockquote>
 
 O'Nolan spandeyreden syne skooljåren ouk deyls an de Synge Street Christian Brothers School. Syn book [[The Hard Life]] is ne halv-autobiografiske beskryving van syne beleyving van de Christenbröyrs.
