*Empty MediaWiki Message*

--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -3,7 +3,7 @@
 ===Symbolen===
 Disse feest is an de godinne (en later de heilige) [[Brigrid]] ewyded.
 
-De [[yren|ierlaand]] doot nå tradity van de låtste grån een krüsyn knöppen, wat sy boaven de düre hanget töt de volgende Imbolc. [[Keltisk krüüs|Brigrid-krüsyn]] het so een vrütseltyn. 
+De [[Ierlaand (laand)|yren]] doot nå tradity van de låtste grån een krüsyn knöppen, wat sy boaven de düre hanget töt de volgende Imbolc. [[Keltisk krüüs|Brigrid-krüsyn]] het so een vrütseltyn. 
 
 In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 
