*Empty MediaWiki Message*

--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -7,6 +7,8 @@ De [[Ierlaand (laand)|yren]] doot nå tradity van de lätste grån een krüsyn k
 
 In oanse kontreien is et ouk wal as [[Ploeg-Marie|Ploog-Mary]] te name.
 
+In dissen tyd gåt lüde eare hüse keyren. Alles wörd an kante dåne, ümme skoune en bevryd van et winter et vöärjår in te gån.
+
 ===Namenverklåring===
 De name Imbolc kümt van et Yrske '''i molg''', wat ''in den buuk'' betekkend. Ofwal, de sköäpe (ooier) dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere namenverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is barre gelöyvweardig.
 
