*Empty MediaWiki Message*

--- a/Monte_Águila.mw
+++ b/Monte_Águila.mw
@@ -11,7 +11,7 @@ Bestaand:Inauguracion Nueva Plaza de Monte Aguila 2017 (63).jpg
 == Uutgaonde verwiezingen ==
 
 * [http://www.monteaguila.cl/ Monteaguila.cl]
-{{commons|Chile}}
+{{commons|Monte Aguila}}
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Stad in Chili]]
