*Empty MediaWiki Message*

--- a/Perspektivisme.mw
+++ b/Perspektivisme.mw
@@ -1,6 +1,6 @@
-'''Perspektivisme''' is de gedachtenisse dat alls van uut 'n bepoalde hoeke bekekken wödt. 
+'''Perspektivisme''' is de gedachtenisse dat alles van uut een bepålden hook bekekken wördt. 
  
-'t Woord 'perspectief' kömp van 't [[Latijn]]se ''perspicere'': arns deurhen kieken, iets duudlik zien of iets gewoar wörn. In de teengnwoordige fillesofie hef 't woord 'n heul aandere bi-jklaank of gevuulsweerde.
+Et woord 'perspektif' kümt van et [[Latijn|latynske]] ''perspicere'': argens döärhen kyken, yts düdelik seen of yts gewaar wörden. In de teagenwoordige [[Filosofie|filosofy]] hevt et woord een heyl andere byklank of gevöölswaerde.
 
 't Begrip verwes, veural deur invloeden van [[Friedrich Nietzsche]], noar 't höast kompleten onvermeugen van de meanse umme trugge te gaon töt de leste begunsels. 't Ienige wat veur de meanse verschent bint 'n veulheid van over mekare hen vallende en met mekare in stried wezende perspektieven. Nietzsche brek met de illusie van de 'waore warklikheid' en benaodrukt dat wi'j de warklikheid uutslutend fragmentaries kunt ervaoren.
 
