*Empty MediaWiki Message*

--- a/Perspektivisme.mw
+++ b/Perspektivisme.mw
@@ -2,11 +2,11 @@
  
 Et woord 'perspektif' kümt van et [[Latijn|latynske]] ''perspicere'': argens döärhen kyken, yts düdelik seen of yts gewaar wörden. In de teagenwoordige [[Filosofie|filosofy]] hevt et woord een heyl andere byklank of gevöölswaerde.
 
-'t Begrip verwes, veural deur invloeden van [[Friedrich Nietzsche]], noar 't höast kompleten onvermeugen van de meanse umme trugge te gaon töt de leste begunsels. 't Ienige wat veur de meanse verschent bint 'n veulheid van over mekare hen vallende en met mekare in stried wezende perspektieven. Nietzsche brek met de illusie van de 'waore warklikheid' en benaodrukt dat wi'j de warklikheid uutslutend fragmentaries kunt ervaoren.
+Mensken künnet neet de dinge seen so as sy echt bint. Künt noit någån wår as et begün van alles ligt. Et eynige wat een menske seen kan is allemåle verskillende bekyks up de dinge, wat lekt dat alles mar willeköárig is en med mekandere in kryg is. [[Friedrich Nietszche]] skrevt dan ouk dat mensken de ''warkelikheid'' noit künt medmaken. Wy künnet alleyne mar stükkyns van de warkelikheid seen. 
 
-'t Begrip is deur Leibniz in de filesofie introduceerd.
+Et begrip is döär [[Gottfried Wilhelm Leibniz]] in de filosofy ekummen.
 
-Perspektivisme ledt töt de vraoge of waore kennis van de warklikheid aggirne wel meuglik is. Is 't meuglik de warklikheid te zien op de meniere zo as e is? Met name in de [[hermeneutiek]] höldt men zich met disse vraoge drok. 
+Perspektivisme gevt de vråge of asset wy de ''warkelikheid'' up eyne of andere wyse künnet weaten. Is 't meuglik de warklikheid te zien op de meniere zo as e is? Vöäral in de [[hermeneutiek|hermeneutik]] holdet sy sich med disse vråge drok. 
 
 {{Dialekt|sdz}}
 
