*Empty MediaWiki Message*

--- a/Perspektivisme.mw
+++ b/Perspektivisme.mw
@@ -2,7 +2,7 @@
  
 Et woord 'perspektif' kümt van et [[Latijn|latynske]] ''perspicere'': argens döärhen kyken, yts düdelik seen of yts gewaar wörden. In de teagenwoordige [[Filosofie|filosofy]] hevt et woord een heyl andere byklank of gevöölswaerde.
 
-Mensken künnet neet de dinge seen so as sy echt bint. Künt noit någån wår as et begün van alles ligt. Et eynige wat een menske seen kan is allemåle verskillende bekyks up de dinge, wat lekt dat alles mar willeköárig is en med mekandere in kryg is. [[Friedrich Nietzsche]] skrevt dan ouk dat mensken de ''warkelikheid'' noit künt medmaken. Wy künnet alleyne mar stükkyns van de warkelikheid seen. 
+Mensken künnet neet de dinge seen so as sy echt bint. Künt noit någån wår as et begün van alles ligt. Et eynige wat een menske seen kan is allemåle verskillende bekyks up de dinge, wat lekt dat alles mar willeköárig is en med mekandere in kryg is. [[Friedrich Nietzsche]] skrevt dan ouk dat mensken de ''warkelikheid'' noit medmaken künnet. Wy künnet alleyne mar stükkyns van de warkelikheid seen. 
 
 Et begrip is döär [[Gottfried Wilhelm Leibniz]] in de filosofy ekummen.
 
