*Empty MediaWiki Message*

--- a/Perspektivisme.mw
+++ b/Perspektivisme.mw
@@ -6,7 +6,7 @@ Mensken künnet neet de dinge seen so as sy echt bint. Künt noit någån wår a
 
 Et begrip is döär [[Gottfried Wilhelm Leibniz]] in de filosofy ekummen.
 
-Perspektivisme gevt de vråge of asset wy de ''warkelikheid'' up eyne of andere wyse künnet weaten. Is 't meuglik de warklikheid te zien op de meniere zo as e is? Vöäral in de [[hermeneutiek|hermeneutik]] holdet sy sich med disse vråge drok. 
+Perspektivisme gevt de vråge of asset wy de ''warkelikheid'' up eyne of andere wyse weaten künnet. Is et möägelik ümme de warkelikheid te künnen seen en snappen so as hee echt is? Vöäral in de [[hermeneutiek|hermeneutik]] holdet sy sich med disse vråge drok. 
 
 {{Dialekt|sdz}}
 
