*Empty MediaWiki Message*

--- a/Krüüs_van_Bentheim.mw
+++ b/Krüüs_van_Bentheim.mw
@@ -3,13 +3,13 @@
 Et '''krüüs van Bentheim''' ([[Duuts|düütsk]]: ''Herrgott von Bentheim'') is een [[crucifix]] uut de [[10e eeuw|teende-]] of [[11e eeuw|elvde eywe]] in de [[Duutslaand|düütske]] plaatse [[Bad Bentheim]].
 
 ==Beskryvving==
-Et beyld is emaked van [[Bentheimer zaandstien|bentheimer sandsteyn]] in [[romaanse kunst|romaanske styl]] en beyld een [[Jezus (traditioneel-christelijk)|Christus]] an et krüüs uut. Et hevt wäärde ümdat dit beyld eyne van de oldste vöärwarpen is van et christendom in dit deyl van Düütskland. Der wördt edacht dat et beyld kenmarken hevt van de [[Saksen (volk)|oldsassiske]] kulture. De wyse ho as de arms van Christus eböägen bint, sol gelyke weasen med et gebår van een germaanske rechter, wonneyr as he sprekken dööd. Et krüüs is 2,45 meater houche en 1,40 meater breyd.
+Et beald is emaked van [[Bentheimer zaandstien|bentheimer sandsteyn]] in [[romaanse kunst|romaanske styl]] en beald een [[Jezus (traditioneel-christelijk)|Christus]] an et krüüs uut. Et hevt waerde ümdat dit beald eyne van de oldste vöärwarpen is van et christendom in dit deyl van Düütskland. Der wördt edacht dat et beald kenmarken hevt van de [[Saksen (volk)|oldsassiske]] kulture. De wyse ho as de arms van Christus eböägen bint, sol gelyke weasen med et gebår van een germaanske rechter, wanneyr as hee sprekken döäd. Et krüüs is 2,45 meater houge en 1,40 meater breyd.
 
 ==Geskydenisse==
-In [[1828]] hebbed se et krüüs up een akker körtby [[Schulte-Kolthoff]] evünden. Et beyld sol dårümme een [[wegkruus|wegkrüüs]] ewesd künnen hebben, wat nå et begün van de [[rifformatie|reformatsy]] in 1544 is ümmegooied en dårnå under et sand ekummen is. In [[1868]] wördden et beyld op de binnenplaatse van [[Kasteel Bentheim]] esetted. Up dee plaatse güng et in [[1945]] kapot döär een [[Geallieerden (Tweede Wereldoorlog)|geallieerd]] leagervoortüüg. Dårnå hebbed se et erestaureared en in [[1951]] terügge-setted.
+In [[1828]] hebbed sy et krüüs up een akker körtby [[Schulte-Kolthoff]] evünden. Et beald sol dårümme een [[wegkruus|wegkrüüs]] ewesd künnen hebben, wat nå et begün van de [[rifformatie|reformaty]] in 1544 is ümme-gooied en dårnå under et sand ekummen is. In [[1868]] wördden et beald up de binnenplaatse van [[Kasteel Bentheim]] esetted. Up dee plaatse güng et in [[1945]] kapot döär een [[Geallieerden (Tweede Wereldoorlog)|geallieerd]] leagervoortüüg. Dårnå hebbed sy et erestaureyred en in [[1951]] terügge-setted.
 
-==Weyty==
-* ''Herrgott von Bentheim'' was vrogger een [[vlook]], wår de landwarkers med skeldden
+==Weatyn==
+* ''Herrgott von Bentheim'' was vrogger een [[vlook]], wår de landwarkers med skelden
 
 
 {{Dialekt|sdz}}
