--- a/Irmin.mw
+++ b/Irmin.mw
@@ -1,4 +1,4 @@
-'''Irmin''' (of: '''Hirmin''', '''Hermin''', '''Ermen''' oldengelsk: '''Eormen''') is een oldsassisken god. Den wördden up de [[Irminsul|irminsulen]] verbealed, wat houge pöäle of boumen waren. Dee hadden een groute waerde vöär de [[Saksen|sassen]]. Mangs wörd Irmin gelyke edåne med de god(en) [[Saxnot|Sasnoot]] en/of med [[Tyr|Tuw]]. 
+'''Irmin''' (of: '''Hirmin''', '''Hermin''', '''Ermen''' oldengelsk: '''Eormen''') is een oldsassisken god. Den wördden up de [[Irminsul|irminsulen]] verbealed, wat houge pöäle of böyme waren. Dee hadden een groute waerde vöär de [[Saksen|sassen]]. Mangs wörd Irmin gelyke edåne med de god(en) [[Saxnot|Sasnoot]] en/of med [[Tyr|Tuw]]. 
 
 Der is weinig bekend oaver de [[Oldsaksiese godsdienst|sassiske religy]], düs is et altyd mar spöälen en råden med de informaty dee asset wy wal hebbet. Der is dan ouk geyn eyndüdige bewearing oaver Irmin, mar wal veer, en dee bint hyrunder up-enömed:
 
