*Empty MediaWiki Message*

--- a/Irmin.mw
+++ b/Irmin.mw
@@ -24,6 +24,6 @@ Tacitus skreav in de eyrste höyvdstük van ''Germania'' et volgende:
 
 Hyr hevt Tacitus et oaver Tuw (Twisto) as oorgod en groutvader van et germaanske volk. Eyne van syn kleinsöäns is Hermin, wår as de Elbe-Germanen (Herminonen) van ofstammen sollen, en hüm düt ouk wear denken an Irmin.
 
-{{Dialekt|sdz|[[Vechte|'t Vechtdal]]|ANS}}
+{{Dialekt|sdz}}
 [[Kategorie:Saksen (volk)]]
 [[Kategorie:Germaanse mythologie]]
