*Empty MediaWiki Message*

--- a/Irmin.mw
+++ b/Irmin.mw
@@ -1,6 +1,6 @@
 '''Irmin''' (of: '''Hirmin''', '''Hermin''', '''Ermen''' oldengelsk: '''Eormen''') is een oldsassisken god. Den wördden up de [[Irminsul|irminsulen]] verbealed, wat houge pöäle of böyme waren. Dee hadden een groute waerde vöär de [[Saksen|sassen]]. Mangs wörd Irmin gelyke edåne med de god(en) [[Saxnot|Sasnoot]] en/of med [[Tyr|Tuw]]. 
 
-Der is weinig bekend oaver de [[Oldsaksiese godsdienst|sassiske religy]], düs is et altyd mar spöälen en råden med de informaty dee asset wy wal hebbet. Der is dan ouk geyn eyndüdige bewearing oaver Irmin, mar wal veer, en dee bint hyrunder up-enömed:
+Der is barre bekend oaver de [[Oldsaksiese godsdienst|sassiske religy]], düs is et altyd mar spöälen en råden med de informaty dee asset wy wal hebbet. Der is dan ouk geyn eyndüdige bewearing oaver Irmin, mar wal veer, en dee bint hyrunder up-enömed:
 
 ==Irminsulen==
 De Irminsulen waren godsdeenstige sinnebealden en måtskappelike bundsteykens van de olde sassen. Et sinnebeald van de eywige macht, dee et heylal drögt (''Universalis Columna'' nöömden de romeinen de irminsulen), so as de wearldboum [[Ygdrassil]] in de noordske mytology.
