--- a/Irmin.mw
+++ b/Irmin.mw
@@ -8,7 +8,7 @@ De Irminsulen waren godsdeenstige sinnebealden en måtskappelike bundsteykens va
 Irmin, Hirmin, Ermen, Eormen, Herman bint de verskillende namen, dee döär verskillende volkerstammen waren an-enöämen vöär etsülvde begrip: universum/ heylal. Et angelsassiske begrip ''Eormengrund'', of et oldnoordske ''Jörmungrund'', waren dichterlike benömings vöär de aerde of de 'wyde wearld'. Dee kümmet van et oldgermaanske ''Ermunaz'', wat grout, houge, wyds en alümpakkend betekkend, en ''grunduz'', wat grund, bodem betekkend.
 
 ==Sasnoot==
-Van de god Saxnoot wörd an-enömmen dat hee den stamgod van de sassen was, en wörd dårümme gelyke edåne met den god Irmin. Ümdat de Irminsûl et bundsteyken van de sassen was. Saxnoot wörd mangs wear gelyke edåne med Tuw, den god van et Thing, orde en de sünne.
+Van den god Saxnoot wörd an-enömmen dat hee den stamgod van de sassen was, en wörd dårümme gelyke edåne met den god Irmin. Ümdat de Irminsûl et bundsteyken van de sassen was. Saxnoot wörd mangs wear gelyke edåne med Tuw, den god van et Thing, orde en de sünne.
 
 ==Tuw==
 Tuw (oldnoordsk: Týr) was ümme en nåby et begün van unske jårtelling den heamelgod en den uppergod in de germaanske mytology. [[Tacitus]] beskreaven in syn ''[[Germania]]'' de germaansken oorgod [[Tuïsto|Twisto]]. Et is annemmelik dat dissend eyne en desülvden is as Tuw (ouk wal enöömd as Mars Thingcus). Tuw is den god van et [[Thing]], rechtvaerdigheid, orde, eyre, mood, oorlog en de verpersoonliking van de sünne. 
