*Empty MediaWiki Message*

--- a/Evangely_når_Filippus.mw
+++ b/Evangely_når_Filippus.mw
@@ -1,13 +1,13 @@
-'''Filippus Evangely''' is een old [[gnostiek|gnostisk]] geskrivt, wülke uut ende  van de veerde ewe of begün vyfde ewe kümt, en wülke sy samen hebbet evünden med 51 andere boken, up Nag Hammadi. Dit is eyne van de verlöären evangelys, de olde geskrivten dee döär de katolyke karke van et vrogge kristendum verketterd en vernetigd bint. Op enkelen nå dan. Et evangely besteet uut vöäle wysheidsspröäken, disse wysheid sol van [[Jezus Christus]] of ekummen wysen. 
+'''Filippus Evangely''' of '''Evangely når Filippus''' is een old [[gnostiek|gnostisk]] geskrivt, wülke uut ende  van de veerde ewye of begün vyvde eywe kümt, en wülke sy samen hebbet evünden med 51 andere boken, up Nag Hammadi. Dit is eyne van de verlöären evangelys, de olde geskrivten dee döär de katolyke karke van et vrogge christendom verkettered en vernetiged bint. Up enkelen nå dan. Et evangely besteyt uut vöäle wysheidsspröäken, disse wysheid sol van [[Jezus Christus]] of ekummen weasen. 
 
-In dit vrogkristlike wark steet de brüüdloft in et middenpünte: Et brüüdloftsvertek wår een menske sich med syn godsvlamme samen kümt; et deepste innerlik van een menske samen kümt med Kristus.
+In dit vrogkristlike wark steyt de brülfte in et middenpünte: Et brülftevertek wår een menske sich med syn godsvlamme samen kümt; et deepste innerlik van een menske samen kümt med Christus.
 
-De evünden geskrivten up Nag Hammadi bint een 52 teksten, en dissent  waren verpakt in darteen papyrusboken. Et Filippus Evangely was verpakt same med et [[Evangelie van Tomas|Thomas Evangely]] en noch vyve andere warken in de tweyde band.
+De evünden geskrivten up Nag Hammadi bint een 52 teksten, en dissend  waren verpakked in darteen papyrusboken. Et Filippus Evangely was verpakked samen med et [[Evangelie van Tomas|Tomas Evangely]] en noch vyve andere warken in de tweyde band.
 
-Et Filippus Evangely is eskreyven in rt koptisk, mar wårskynlik is dissent weyr vertaald vanuut et greeksk, mar lüde denkt ouk dat de skryver weyt ehad mütten hebben van et arameesk. Ouk nemt lüde an dat et van Syrië vandån is. Et hevt ouk vöäle gelykenisse med valentiniaans-gnostiske denkwyses en dårümme is et een readen ümme de originele skryverye, in et greeksk, te dateyren in de tweyde hälvte van de tweyde ewe, of noch heyl misskeen vrog in de darde ewe. Et is düs neet so as et Thomas Evangely dat et een vrogge brunne is oaver Jesus; ümdat Thomas eartyds is eskreyven as al de boken uut et [[Ni'je Testement|Nye Testament]].
+Et Filippus Evangely is eskreaven in et koptisk, mar wårskynlik is dissend wear vertaled vanuut et greeksk, mar lüde denket ouk dat de skryver weat ehad hebben mütten van et arameesk. Ouk nemmet lüde an dat et van Syrie vandån is. Et hevt ouk vöäle gelykenisse med valentiniaansk-gnostiske denkwyses en dårümme is et een readen ümme de originele skryverye, in et greeksk, te dateyren in de tweyde hälvte van de tweyde eywe, of noch heyl misskyn vrog in de darde eywe. Et is düs neet so as et Tomas Evangely dat et een vrogge brunne is oaver Jesus; ümdat Tomas eyrtyds eskreaven is as al de boken uut et [[Ni'je Testement|Nye Testament]].
 
 ==Inhold==
-Et evangely (oldsassisk: godspell) besteet uut een 100 en 1 mål wysheidspröäken, wülken neet rap te begrypen bint, en heylemåle is een bepålde gnostiske weyten en meditaty nöydig. De uutspråken, of stükkys, wördet ouk wal 'logions' enömed. De tekste wörd wal et Filippus Evangely enömed, mar de eynige mål dat Filippus der in vöärkümt is in logion 72 (vandår de benaming van Evangely ''når'' Filippus). Et mystery van et brüüdsvertrek steet in et middenpünte in dit vrogkristlike wark, se vereynigd ouk Kristus 'Adam' en 'Eva' in et geystelike brüüdsvertrek, symbool van de hereyniging van een menske med syn godsvlamme. Ouk hevt Maria van Magdala een wat mål een düdelike rolle, wat ouk typerend is vöär de gnostiske boken, want de karke hevt höyr ayt vord emuvveld en höyr verdrüngen töt eyne wülekn sy volgens de vrogge kristenen en gnostyken neet was, algemean wörd sy beskouwd as eyne van de tröwsten leyrlings van Jesus, en in mangsmålse teksten kümt sülvs in vöär dat Jesus en Maria van Magdala mekare küsset. 
+Et evangely (oldsassisk: godspell) besteyt uut een 100 en 1 mål wysheidspröäken, wülken neet rap te begrypen bint, en heylemåle is een bepålde gnostiske weaten en meditaty nöydig. De uutspråken, of stükkyns, wördet ouk wal 'logions' enöömd. De tekste wörd wal et Filippus Evangely enöömd, mar de eynige mål dat Filippus der in vöärkümt is in logion 72 (vandår de benaming van Evangely ''når'' Filippus). Et mystery van et brüüdsvertrek steyt in et middenpünte in dit vrogchristlike wark, sy vereyniged ouk Kristus 'Adam' en 'Eva' in et geystelike brüüdsvertrek, symbool van de hereyniging van een menske med syn godsvlamme. Ouk hevt Maria van Magdala een wat mål een düdelike rolle, wat ouk typerend is vöär de gnostiske boken, want de karke hevt höyr ait vord emüvveld en höyr verdrüngen töt eyne wülken sy volgens de vrogge christenen en gnostiken neet was, algemeyn wörd sy beskouwd as eyne van de tröywste leyrlinge van Jesus, en in mangsmålske teksten kümt sülvs in vöär dat Jesus en Maria van Magdala mekander küsset. 
 
 {{Dialekt|sdz}}
 
