--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -31,6 +31,20 @@ de Eywigheid untrolled.
 
 O'Nolan spandeyreden syne skooljåren ouk deyls an de Synge Street Christian Brothers School. Syn book [[The Hard Life]] is ne halv-autobiografiske beskryving van syne beleyving van de Christenbröyrs.
 
+===Studentenjåren===
+O'Nolan was een druk baasman in syne studententyd an [[University College, Dublin]] (UCD). Dår was hee een aktiv en vöälbespröäken lid van de in dee tyd bekende ''Literary and Historical Society''. Hee skreav vöär et studentenblad ''Comhthrom Féinne'' (''Earlik Spöl'') under verskeidene skuulnaams, mär vöäral as ''Brother Barnabas''. Upmarkelikerwys skreav hee doomåls een verhaal med de naam "Scènes in een roman van Brother Barnabas (miskyn wal nå synen dood)", wårin vöäle van syne ideyen en tema's når vöärten kummet dee as later ouk in syn book ''At Swim-Two-Birds''. In et verhaal wörd den sogenaamden autöör van et verhaal stöädig teagenwarked döär syne eygene karakters, dee vastbeslöäten öär eygene weg keset, wo hoge of laege 'n skryver ouk springt. Den bandyt in et verhaal, eyne Carruthers McDaid, den as 'n skryver bedoold had as et laegste van et laegste soort misdådiger "den as geleidelik mus afsakken töt et butenste uuteynde van de menskelike rottigheid," vindet in steade dårvan een modaal inkummen med de verkoop van katten an öldere vrowlüde en wörd nen heymeliken karkenganger, sunder toostemming van de skryver. Underwyl keset Shaun Svoolish, den beoogden held van et verhaal, vöär een händig en gemakkelik leaven sunder romantik en heldendåden:
+
+:'Ik mag dan wan nen börgerliken kül weasen,' antwoorden hee, 'mer ik weate gewoon wat ik gaerne hebbe. Wårüm mag ik nit med Bridie trowen en et es by de ambtenarye proberen?'
+:'Ungelükken by et spoor sint gelükkig seldsaam,' sea ik uuteyndelik, 'mär as se geböäret, sint se verskrikkelik. Denkt der noch es oaver.'
+
+In 1934 stichteden O'Nolan en syne medstudenten een tydskrivt ''Blather'', dat et nit lange volhöälden. De skryvsels dårin, med düdelike kenmarken van jöögdelike selvoaverskatting, låt alwear wat van O'Nolan's latere wark seen. Dit mål wyset se når de styl van syne latere ''Cruiskeen Lawn''-kolumns as Myles na gCopaleen:
+
+:Hyr is ''Blather''. Terwyl as wy vöärwaerts skrydet üm unsen büging te maken, spüür y vergeavens når teakenen van underdånigheid of når eanig bewys van een verlangen üm te pleseren. Wy sint een selvingenöämen en verdörven grup kearls. Wy sint so gröyts as bantamhanen en ydel as pauwen.
+
+:''Blather'' interesseyret sik niks. Nen sardonisken lach untsköt uns terwyl wy büget, wreyde en cyniske hunde dee as wy sint. Et is nen verskrikkeliken lach, nen lach van verlöärene kearls. Ruuk y de lucht van swår beer?
+
+O'Nolan, den as [[duuts|düütsk]] in [[Dublin]] studeyreden, kan tenminsten deylen van [[1933]] en [[1934]] in [[Duutsland|Düütskland]] eweasd hebben, vöärnamelik in [[Köln]] en [[Bonn]], mär details sint unseaker en vöälbespröäken. In [[1965]] beweyreden hee selv dat hey "vöäle månden in et [[Rijnland|Rynland]] en Bonn döärbrachten, sikselv afdryvend van de strikte nåjacht van study." töt vandage is der gin unafhankelik bewys vöär dissen uutvlucht (of vöär syn selvverklårde hüwelik med eyne 'Clara Ungerland' uut Köln). In öäre biografy van O'Nolan bespreaket Costello en Van de Kamp et halvslachtige bewys. See segt "...dat et in afweysigheid van slutend bewys een mystery ümgeaven döär giswark sal blyven, up sikselv representativ vöär de andere mysterys in et leyven van Brian O'Nolan dee den undersöker noch altyd uutdaget."<ref>Costello, Peter en Van de Kamp, Peter. "Flann O'Brien – An Illustrated Biography." London, UK. Bloomsbury 1987. ISBN 0-7475-0129-7. bls. 45–50.</ref>
+
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Yrsken skryver]]
