--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -32,7 +32,7 @@ de Eywigheid untrolled.
 O'Nolan spandeyreden syne skooljåren ouk deyls an de Synge Street Christian Brothers School. Syn book [[The Hard Life]] is ne halv-autobiografiske beskryving van syne beleyving van de Christenbröyrs.
 
 ===Studentenjåren===
-O'Nolan was een druk baasman in syne studententyd an [[University College, Dublin]] (UCD). Dår was hee een aktiv en vöälbespröäken lid van de in dee tyd bekende ''Literary and Historical Society''. Hee skreav vöär et studentenblad ''Comhthrom Féinne'' (''Earlik Spöl'') under verskeidene skuulnaams, mär vöäral as ''Brother Barnabas''. Upmarkelikerwys skreav hee doomåls een verhaal med de naam "Scènes in een roman van Brother Barnabas (miskyn wal nå synen dood)", wårin vöäle van syne ideyen en tema's når vöärten kummet dee as hee later ouk in syn book ''At Swim-Two-Birds'' gebrukt. In et verhaal wörd den sogenaamden autöör van et verhaal stöädig teagenwarked döär syne eygene karakters, dee vastbeslöäten öär eygene weg keset, wo hoge of laege 'n skryver ouk springt. Den bandyt in et verhaal, eyne Carruthers McDaid, den as 'n skryver bedoold had as et laegste van et laegste soort misdådiger "den as geleidelik mus afsakken töt et butenste uuteynde van de menskelike rottigheid," vindet in steade dårvan een modaal inkummen med de verkoop van katten an öldere vrowlüde en wörd nen heymeliken karkenganger, sunder toostemming van de skryver. Underwyl keset Shaun Svoolish, den beoogden held van et verhaal, vöär een händig en gemakkelik leaven sunder romantik en heldendåden:
+O'Nolan was een druk baasman in syne studententyd an [[University College, Dublin]] (UCD). Dår was hee een aktiv en vöälbespröäken lid van de in dee tyd bekende ''Literary and Historical Society''. Hee skreav vöär et studentenblad ''Comhthrom Féinne'' (''Earlik Spöl'') under verskeidene skuulnaams, mär vöäral as ''Brother Barnabas''. Upmarkelikerwys skreav hee doomåls een verhaal med de naam "Scènes in een roman van Brother Barnabas (miskyn wal nå synen dood)", wårin vöäle van syne ideyen en tema's når vöärten kummet dee as hee later ouk in syn book ''At Swim-Two-Birds'' gebrukt. In et verhaal wörd den sogenaamden autöör van et verhaal stöädig teagenwarked döär syne eygene karakters. Dee keset vastbeslöäten öär eygene weg, wo hoge of laege 'n skryver ouk springt. Den bandyt van et verhaal, eyne Carruthers McDaid, den as 'n skryver bedoold had as et laegste van et laegste soort misdådiger, "den as geleidelik mus afsakken töt et butenste uuteynde van de menskelike rottigheid," vindet in steade dårvan een modaal inkummen med de verkoop van katten an öldere vrowlüde en wörd nen heymeliken karkenganger, sunder toostemming van de skryver. Underwyl keset Shaun Svoolish, den beoogden held van et verhaal, vöär een händig en gemakkelik leaven sunder romantik en heldendåden:
 
 :'Ik mag dan wan nen börgerliken kül weasen,' antwoorden hee, 'mer ik weate gewoon wat ik gaerne hebbe. Wårüm mag ik nit med Bridie trowen en et es by de ambtenarye proberen?'
 :'Ungelükken by et spoor sint gelükkig seldsaam,' sea ik uuteyndelik, 'mär as se geböäret, sint se verskrikkelik. Denkt der noch es oaver.'
